2006-05-08 Roy Rankin <rrankin@ihug.com.au>
	* src/comparator.h, src/comparator.cc, src/p16f62x.cc:
	- rewritten so comparator processor differences in processor class
	* src/p16x6x.cc: portc register removed from p16f62x
	* src/p16f87x.cc, src/p16f87x.h: a2d added, comparator change
	* src/16bit-processors.cc, src/p16x7x.cc src/a2dconverter.h,
	  src/a2dconverter.cc: code change for pending p16f88
	* regression/a2d/Makefile, regression/run_regression.sh,
	  regression/a2d/16f873a.lkr, regression/a2d/p16f873a.asm:
	- add a2d regression for p16f873a

2006-05-06 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, src/stimuli.h, cli/cmd_stimulus.cc: Stimuli
	parameters are now initialized with Values instead of doubles.

2006-05-06 Scott Dattalo <scott@dattalo.com>
	* modules/usart.h, modules/usart.cc:
	 - Added the boolean attribute 'crlf'. If this is set true, then
	 carriage returns and line feeds will generate new lines in the
	 gui terminal window.

2006-05-06 Robert Pearce <rob@bdt-home.demon.co.uk>
	* modules/usart.h, modules/usart.cc: 
	 - Usart GUI now displays non-printable characters as <%02X>.
	 - The usart module now supports a transmit FIFO. This allows
	 transmit data to be queued while the simulation is stopped.

2006-04-30 Roy Rankin <rrankin@ihug.com.au>
	* gui/gui_src.h gui/gui_src_asm.cc: fix ungisgned - signed compile 
	  warnings
	* gui/gui_breadboard.cc: get trace working again
	* gui/Makefile.am: remove unused and incorrect defines

2006-04-29 Scott Dattalo <scott@dattalo.com>
	* modules/switch.cc, modules/switch.h,
	regression/switch_test/switch_test.asm:  Moved pin functionality
	from the Switch class into the Switch_Pin class.

2006-04-29 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/value.cc: Fixed Float type check error.

2006-04-29 Roy Rankin <rrankin@ihug.com.au>
	* src/gpsim_object.h src/gpsim_object.cc src/stimuli.cc
          src/stimuli.h gui/gui_breadboard.h gui/gui_breadboard.cc: