@@ -1,3 +1,7 @@
+2006-05-08 Borut Razem <borut.razem@siol.net>
+
+	* extras/usart_con.cc: sync with modules/usart.cc
+
 2006-03-05 Borut Razem <borut.razem AT siol.net>
 
 	* commited code to CVS
